# owitness_task

./: .gitignore  Dockerfile  README.md  data.json  pyproject.toml  utils.py
app/: main.py
tests/: conftest.py  test_main.py
