[tool.poetry]
name = "orbital_witness_api"
version = "0.1.0"
description = ""
authors = ["ps"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
